# stm32-fft

./: Cargo.toml
.cargo/: config.toml
fft-host/: Cargo.toml
fft-host/src/: main.rs
src/: main.rs  util.rs
stm/: .embed.toml  Cargo.toml
stm/.cargo/: config.toml
stm/src/: main.rs  util.rs
